--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -63,8 +63,42 @@ transition: all 0.2s;
     background: #02492e !important;
 
 }
+.ant-layout{
+    flex: none !important;
+    
+}
+/*Project */
 .mainProjectContainer{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 25vw;
+    height: 35vh;
+    border: 1px solid #02492e;
+    border-radius: 25px;
 }
+
+.topBar{
+    width: 100%;
+    min-height: 3vh;
+    background-color:#007C4D ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px 25px 0 0 ;
+}
+/*Project */
+/*Home */
+.homeContainer{
+    width: 100%;
+    display: flex;
+    
+}
+.projectsContainer{
+    margin-top: 7vh;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 0vh 2vw;
+}
+/*Home */
